wisecow-main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - my-wisecow-app.local
    secretName: my-mywisecow-app-tls
  rules:
  - host: my-wisecow-app.local
    http:
      paths:
      - path: /run
        pathType: Prefix
        backend:
          service:
            name: wisecow-app-service
            port:
              number: 80
